<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#FFFFFF"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="it.unina.locationhub.fragments.login.LoginFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout"
        style="@style/TextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/username_input"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeWidth="3dp"
        app:boxStrokeWidthFocused="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/continue_btn"
        app:layout_constraintStart_toStartOf="@+id/continue_btn"
        app:layout_constraintTop_toBottomOf="@+id/error_text_view"
        app:layout_constraintVertical_bias="0.050000012">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_text_edit"
            style="@style/HintTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/ibm_plex_sans_regular"
            android:textColor="@color/text_color" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/welcome_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:fontFamily="@font/ibm_plex_sans_medium"
        android:foregroundTint="#03A9F4"
        android:text="@string/welcome_label"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01999998" />

    <TextView
        android:id="@+id/description_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ibm_plex_sans_medium"
        android:text="@string/description_label"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_label"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/port_layout"
        style="@style/TextInputLayoutStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:hint="@string/port_text"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeWidth="3dp"
        app:boxStrokeWidthFocused="3dp"
        app:layout_constraintEnd_toEndOf="@+id/text_input_layout"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/ip_layout"
        app:layout_constraintTop_toTopOf="@+id/ip_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/port_text_edit"
            style="@style/HintTextStyle"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:digits="0123456789"
            android:fontFamily="@font/ibm_plex_sans_regular"
            android:inputType="phone"
            android:textColor="@color/text_color" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ip_layout"
        style="@style/TextInputLayoutStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/ip_text"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeWidth="3dp"
        app:boxStrokeWidthFocused="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/continue_btn"
        app:layout_constraintTop_toBottomOf="@+id/description_label"
        app:layout_constraintVertical_bias="0.16000003">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ip_text_edit"
            style="@style/HintTextStyle"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:digits="0123456789."
            android:fontFamily="@font/ibm_plex_sans_regular"
            android:inputType="phone"
            android:textColor="@color/text_color" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/continue_btn"
        android:layout_width="343dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/ibm_plex_sans_medium"
        android:text="@string/continue_btn_label"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.TextView.SpinnerItem"
        android:textSize="22sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/share_position_agreement_switch_login"
        app:layout_constraintVertical_bias="0.74" />

    <include
        android:id="@+id/share_position_agreement_switch_login"
        layout="@layout/switch_share_position"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/text_input_layout"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/text_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/error_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/username_error_label"
        android:textColor="@color/text_error_color"
        app:layout_constraintEnd_toEndOf="@+id/text_input_layout"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/text_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/ip_layout" />

    <TextView
        android:id="@+id/error_username_already_used_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/username_error_already_used_label"
        android:textColor="@color/text_error_color"
        app:layout_constraintEnd_toEndOf="@+id/text_input_layout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/text_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/ip_layout" />

    <TextView
        android:id="@+id/error_ip_and_port"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/error_ip_or_port_input"
        android:textColor="@color/text_error_color"
        app:layout_constraintBottom_toTopOf="@+id/ip_layout"
        app:layout_constraintEnd_toEndOf="@+id/text_input_layout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/text_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/description_label"
        app:layout_constraintVertical_bias="0.85" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_earth_globe"
        app:layout_constraintBottom_toTopOf="@+id/description_label"
        app:layout_constraintEnd_toStartOf="@+id/welcome_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>